hello-world/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    # http://docs.cert-manager.io/en/latest/reference/ingress-shim.html#supported-annotations
    kubernetes.io/tls-acme: 'true'
    # http://docs.cert-manager.io/en/latest/admin/upgrading/upgrading-0.2-0.3.html#change-to-the-default-behaviour-of-ingress-shim
    certmanager.k8s.io/acme-http01-edit-in-place: 'true'
    # This can be used to set the TTL of the DNS records created, but currently fails when using Google Cloud DNS due to
    # https://github.com/kubernetes-incubator/external-dns/issues/467
#    external-dns.alpha.kubernetes.io/ttl: '86400'
spec:
  tls:
  - secretName: cert-manager-hello-world
    hosts:
    - my.example.org
  rules:
    - host: my.example.org
      http:
        paths:
        - backend:
            serviceName: hello-world
            servicePort: 80
